--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,3 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
 
 $base-font: 'Raleway', sans-serif;
+
+@mixin font-size($n) {
+  @include ms-respond(font-size, $n);
+}
