--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Quicksand:300&display=swap');
 
-$base-font: 'Raleway', sans-serif;
+$base-font: 'Quicksand', sans-serif;
 
 @mixin font-size($n) {
   @include ms-respond(font-size, $n);
