--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -2,10 +2,25 @@
 @import '../variables.scss';
 
 .container {
-  margin: 48px 24px;
+  margin-top: 24%;
+  margin-left: 8%;
+  @include font-size(2);
+
+  @media (min-width: $viewport-12) {
+    margin-top: 16%;
+  }
 
   > p {
     color: gray;
-    @include font-size(2);
+  }
+
+  > p:last-of-type {
+    margin-bottom: 16%;
+  }
+
+  @media (min-width: $viewport-12) {
+    > p:last-of-type {
+      margin-bottom: 8%;
+    }
   }
 }
