--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand:300&display=swap');
 
 $base-font: 'Quicksand', sans-serif;
+$viewport-12: 1200.1px;
 
 @mixin font-size($n) {
   @include ms-respond(font-size, $n);
