Update social media links style

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand:300&display=swap');
 
+$text-main: gray;
+$gray: #c8c8c8;
+$light-gray: #e0e0e0;
+
 $base-font: 'Quicksand', sans-serif;
 $viewport-12: 1200.1px;
 
