--- a/src/components/SocialMediaLinks.module.scss
+++ b/src/components/SocialMediaLinks.module.scss
@@ -14,17 +14,19 @@
 
   @media (min-width: $viewport-12) {
     > li {
-      margin-right: 48px;
+      margin-right: 56px;
     }
   }
 
   > li > a {
     text-decoration: none;
-    color: gray;
+    color: $text-main;
+    border-bottom: 1px solid $light-gray;
   }
 
   > li > a:hover,
   > li > a:focus {
     color: black;
+    border-color: $gray;
   }
 }
