Fix lint errors

--- a/src/vendors.scss
+++ b/src/vendors.scss
@@ -6,14 +6,14 @@ $modularscale: (
   ratio: 1.2,
   480px: (
     base: 13px,
-    ratio: 1.15
+    ratio: 1.15,
   ),
   768px: (
     base: 14px,
-    ratio: 1.16
+    ratio: 1.16,
   ),
   1280px: (
     base: 14px,
-    ratio: 1.17
-  )
+    ratio: 1.17,
+  ),
 );
