Move font import to base

--- a/src/base.scss
+++ b/src/base.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Quicksand:300&display=swap');
+
 @import './vendors.scss';
 @import './variables.scss';
 
