--- a/src/base.scss
+++ b/src/base.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand:300&display=swap');
 
-@import './vendors.scss';
+@import './vendor.scss';
 @import './variables.scss';
 
 html,
