--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,20 +1,13 @@
-@import '../vendor.scss';
-@import '../variables.scss';
+@import '../styles/vendor.scss';
+@import '../styles/variables.scss';
 
 .container {
-  margin: 16% 8%;
-  @include font-size(2);
-
-  > p {
-    color: $text-main;
-  }
-
   > p:nth-last-of-type(2) {
     margin-bottom: 16%;
   }
 
   @media (min-width: $viewport-12) {
-    margin-top: 8%;
+    margin-top: 16%;
 
     > p:nth-last-of-type(2) {
       margin-bottom: 4%;
