--- a/src/components/Layout.module.scss
+++ b/src/components/Layout.module.scss
@@ -5,7 +5,7 @@
   margin: 16% 8%;
 
   @media (min-width: $viewport-12) {
-    margin: 0 auto;
+    margin: 8% auto;
     width: 100%;
     max-width: $container-size;
   }
